manifests/media/huntarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: huntarr
  namespace: media
spec:
  serviceName: huntarr
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: huntarr
  template:
    metadata:
      labels:
        app: huntarr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      restartPolicy: Always
      containers:
        - name: huntarr
          image: docker.io/huntarr/huntarr:latest@sha256:8f6f2ba9e7c0b7dbc52e6b1fdc7503327d7f3725b9c9bc3dbe5dd93644d99c55
          ports:
            - containerPort: 9705
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: huntarr-config
              mountPath: /config
          livenessProbe:
            tcpSocket:
              port: 9705
          readinessProbe:
            tcpSocket:
              port: 9705
  volumeClaimTemplates:
    - metadata:
        name: huntarr-config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
