manifests/media/huntarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: huntarr-svc
  namespace: media
spec:
  selector:
    app: huntarr
  ports:
    - name: http
      port: 9705
      targetPort: 9705
