manifests/media/huntarr/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: huntarr
  namespace: media
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cert-manager
  hostnames:
    - huntarr.cluster.nelsondane.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: huntarr
          port: 9705
